# Labs_MAI

./: title.docx
Labs_Mai/: README.md
Labs_Mai/labs-1/: CMakeLists.txt
Labs_Mai/labs-1/assets/: block-schema.lab1.drawio
Labs_Mai/labs-2/: mian.cpp
Labs_Mai/labs-2/assets/: block-scheme.drawio
Labs_Mai/labs-2/backups/: 12.cpp  func.cpp
Labs_Mai/labs-3/__tests__/: test_correct_02.txt  test_error_invalid_format.txt  test_uncorrected_VEC.txt
labs-1/: main.cpp  ~$lab.docx
labs-2/: CMakeLists.txt  psevdo-code.txt  while_version.cpp
labs-2/assets/: Lab2.docx  block-scheme
labs-2/backups/: save.cpp
labs-3/: CMakeLists.txt  Lab3.docx  block-scheme.drawio  main.cpp  ~$Lab3.docx
labs-3/__tests__/: test_correct_01.txt  test_correct_03.txt  test_error_negative_params.txt  test_uncorrected_M1M2_1.txt  test_uncorrected_M1M2_2.txt  test_uncorrected_M1M2_3.txt  test_uncorrected_VEC1.txt  test_uncorrected_VEC2.txt
